Implemented Google Authentication

--- a/GoogleAuth/Server/appsettings.json
+++ b/GoogleAuth/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GoogleAuth.Server-086c2c40-3e5c-4a3f-97ca-ad6fed523318;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorIdentity;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
